[package]
name = "connector"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.31", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "time"] }
tokio = { version = "1", features = ["full"] }
